lti controller refactoring